<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>Libreria_Online</groupId>
    <artifactId>Libreria_Online</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>Libreria_Online</name>
    <description>Add project description here</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
                <dependency>
    <groupId>org.junit.jupiter</groupId>
    <artifactId>junit-jupiter-api</artifactId>
    <version>5.0.0-M5</version>
    <scope>test</scope>
        </dependency>
        <dependency>
        	<groupId>org.testfx</groupId>
        	<artifactId>testfx-junit5</artifactId>
        	<version>4.0.16-alpha</version>
        	<scope>test</scope>
        </dependency>
        <dependency>
        	<groupId>org.testfx</groupId>
        	<artifactId>testfx-junit</artifactId>
        	<version>4.0.15-alpha</version>
        </dependency>

        <dependency>
        	<groupId>org.hamcrest</groupId>
        	<artifactId>hamcrest-junit</artifactId>
        	<version>2.0.0.0</version>
        	<scope>test</scope>
        </dependency>
        <dependency>
        	<groupId>org.loadui</groupId>
        	<artifactId>testFx</artifactId>
        	<version>3.1.2</version>
        	<scope>test</scope>
        </dependency>
        <dependency>
        	<groupId>com.google.guava</groupId>
        	<artifactId>guava-testlib</artifactId>
        	<version>14.0.1</version>
        	<scope>test</scope>
        </dependency>
        
        <dependency>
        	<groupId>com.itextpdf</groupId>
        	<artifactId>itextpdf</artifactId>
        	<version>5.5.9</version>
        </dependency>
        <dependency>
        	<groupId>org.mybatis</groupId>
        	<artifactId>mybatis</artifactId>
        	<version>3.4.5</version>
        </dependency>
        <dependency>
    		<groupId>mysql</groupId>
    		<artifactId>mysql-connector-java</artifactId>
    		<version>8.0.22</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher -->
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat</artifactId>
			<version>9.0.41</version>
			<type>pom</type>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
		<dependency>
		    <groupId>org.jacoco</groupId>
		    <artifactId>jacoco-maven-plugin</artifactId>
		    <version>0.8.4</version>
		</dependency>




    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.4</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			<plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
          	<configuration>
		        <argLine>
		            --illegal-access=permit
		        </argLine>
		        <skipTests>false</skipTests>
                <testFailureIgnore>true</testFailureIgnore>
                <forkCount>0</forkCount> 
		    </configuration>
        </plugin>
        <plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-failsafe-plugin</artifactId>
		    <version>2.22.1</version>
		    <configuration>
		        <argLine>
		            --illegal-access=permit
		        </argLine>
		    </configuration>
		</plugin>
		        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.9</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.4</version>
            </plugin>
        </plugins>
    </reporting>
</project>
